--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,9 +1,9 @@
 // Import page-specific CSS files here.
 @import "home";
 
-
 .btn-primary {
   border-radius: 8px;
+  text-decoration-color: white;
 }
 
 .card {
