--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -5,16 +5,17 @@
   .card {
     margin-top: 30px;
   }
+  .card-header {
+    padding: 8px, 16px;
+  }
 </style>
 </head>
 <body>
   <div class="card text-center w-75 mx-auto mp-auto margin-auto mb-5">
-    <div class="">
-      <div class="card-header">
-        Trip details
+    <div class="card-header">
+      <div class="">
+        <h2>Edit <%= resource_name.to_s.humanize %></h2>
       </div>
-      <h2>Edit <%= resource_name.to_s.humanize %></h2>
-
       <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
         <%= f.error_notification %>
 
@@ -51,7 +52,8 @@
         </div>
 
         <div class="form-actions">
-          <%= f.button :submit, "Update" %>
+          <%= f.button :submit, "Update", class: "btn btn-primary" %>
+          <%# <%=link_to "My Profile", my_profile_path, class: "btn btn-primary" %>
         </div>
       <% end %>
       <div class="card-header">
