--- a/app/views/pets/new.html.erb
+++ b/app/views/pets/new.html.erb
@@ -2,7 +2,7 @@
   <div class="row justify-content-md-center">
     <div class="col-xs-12 col-sm-4 col-sm-offset-4">
 
-      <div class="form-inputs">
+      <div class="form-login">
         <h3 class="maintext text-center">Upload your pet info</h3>
         <div class="text-center">
           <%= simple_form_for (@pet) do |f| %>
