--- a/app/assets/stylesheets/components/_login_form.scss
+++ b/app/assets/stylesheets/components/_login_form.scss
@@ -1,8 +1,8 @@
 .form-login {
-  background-color: transparent;
+  background-color: white;
   padding: 10px 20px;
   margin-top: 50px;
-  border-radius: 3px;
+  border-radius: 10px;
   box-shadow: 1px 1px 2px rgba(0,0,0,0.1);
   h2 {
     font-size: 25px;
