--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,14 +1,13 @@
 <div class="container">
-  <div class="row">
+  <div class="row justify-content-md-center">
     <div class="col-xs-12 col-sm-4 col-sm-offset-4">
-
       <div class="form-login">
         <h2>Sign up</h2>
 
           <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
             <%= f.error_notification %>
 
-            <div class="form-inputs w-50 mb-50">
+            <div class="form-inputs">
               <%= f.input :first_name,
                           required: true,
                           autofocus: true,
