first change Icon done

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -62,3 +62,16 @@ img {
 .form-control {
   border-radius: 10px;
 }
+
+.peticons img {
+  width: 50px;
+  align-items: center;
+  border-radius: 100%;
+}
+
+.form-check {
+  width: 75px;
+  text-align: center;
+  margin: 10px;
+  align-content: space-between;
+}
