--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -1,4 +1,7 @@
 <%# <%= link_to "Book Now!", new_booking_path %>
+<div>
+  <h1 class="glow">Get ready & rent it!!!</h1>
+</div>
 <div class="flat-banner text-center">
   <h1><%= @flat.title %></h1>
   <h2><%= @flat.address %></h2>
