profile ad pet pic updated

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -61,7 +61,7 @@
 
   .glow:nth-child(1) {
     font-family: 'Ubuntu', sans-serif;
-    color: #fff;
+    color: #ffffff;
     animation: red 1.5s ease-in-out infinite alternate;
     font-weight:700;
   }
@@ -73,9 +73,13 @@
 
   @keyframes red{
     from {
-      text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #FF1177, 0 0 70px #FF1177, 0 0 80px #FF1177, 0 0 100px #FF1177, 0 0 150px #FF1177;
+      text-shadow: 0 0 10px #fff, 0 0 40px #FF1177, 0 0 70px #FF1177, 0 0 80px #FF1177, 0 0 100px #FF1177, 0 0 150px #FF1177;
     }
     to {
-      text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #FF1177, 0 0 35px #FF1177, 0 0 40px #FF1177, 0 0 50px #FF1177, 0 0 75px #FF1177;
+      text-shadow: 0 0 5px #fff, 0 0 20px #FF1177, 0 0 35px #FF1177, 0 0 40px #FF1177, 0 0 50px #FF1177, 0 0 75px #FF1177;
     }
   }
+
+
+  // 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff,
+  // 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff,
