--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -49,6 +49,11 @@
                       hint: "we need your current password to confirm your changes",
                       required: true,
                       input_html: { autocomplete: "current-password" } %>
+          <%= f.input :photo,
+                      hint: "upload a picture for your profile",
+                      required: false,
+                      input_html: { autocomplete: "user-photo" } %>
+
         </div>
 
         <div class="form-actions">
