--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -80,3 +80,9 @@ img.peticons {
   width: 35px;
   border-radius: 100px;
 }
+
+.peticons fieldset{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
