--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -42,6 +42,7 @@
                 mode: "range",
                 flatpickr_date_format: "Y-m-d",
                 flatpickr_min_date: Time.zone.now,
+                # flatpickr_default_date: Time.zone.now,
                 # inline: true,
                 enableTime: true,
                 minTime: "09:00",
