--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -26,3 +26,4 @@ $border-radius-sm: 2px;
 // Override other variables below!
 $primary: $my-pink;
 $info: $my-green;
+$carousel-transition-duration: .6s;
