--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon center <%= yield(:navbar_class) %>">
-  <%= link_to "rooth_path", class: "navbar-brand" do %><%= yield(:logo_class) %>
+  <%= link_to root_path, class: "navbar-brand" do %><%= yield(:logo_class) %>
     <%= image_tag "LogoPH.png" %>
   <% end %>
 
